chandeliers-lus/tests/compile_fail/ui/syn/noassoc.stderr
error: Comparison operator < is not associative
 --> tests/compile_fail/ui/syn/noassoc.rs:2:21
  |
2 |     const B: bool = 0 < 1 > 2 < 3;
  |                     ^^^^^^^^^^^^^
  |
  = note: Maybe replace `0 < 1 > 2` with `0 < 1 and 1 > 2` ?

error: Comparison operator = is not associative
 --> tests/compile_fail/ui/syn/noassoc.rs:6:22
  |
6 |     const B2: bool = 0 = 1 <> 2 = 3;
  |                      ^^^^^^^^^^^^^^
  |
  = note: Maybe replace `0 = 1 <> 2` with `0 = 1 and 1 <> 2` ?
